# ee-sports

./: '  .gitignore  docker-compose.yml
api-gateway/: README.md  bun.lockb  index.ts  package.json  tsconfig.json
api-gateway/config/: config.yaml
api-gateway/controllers/: auth.controller.ts
api-gateway/types/: config.type.ts  response.type.ts
api-gateway/utils/: _fetchData.util.ts  auth.util.ts  customResourceResponse.util.ts  getConfigData.util.ts  response.util.ts
auth/: README.md  bun.lockb  index.ts  package.json
auth-service/: Dockerfile  README.md  bun.lockb  constants.ts  index.ts  package-lock.json  package.json  tsconfig.json
auth-service/controllers/: auth.controller.ts
auth-service/prisma/: schema.prisma
auth-service/repo/: auth.repo.ts
auth-service/routes/: auth.router.ts
auth-service/services/: auth.service.ts
auth-service/utils/: cookie.util.ts  createResponse.util.ts  generateResetToken.util.ts  responseHanlder.util.ts  routeErrorHandler.util.ts  token.util.ts
notification-service/: .babelrc  .dockerignore  Dockerfile  README.md  bun.lockb  index.ts  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
tournament-service/: .gitignore  Cargo.toml  Rocket.toml  diesel.toml
tournament-service/migrations/2024-12-09-083634_create_initial_tables/: down.sql  up.sql
tournament-service/migrations/2024-12-09-091524_remove_game_mode_and_map_type/: up.sql
tournament-service/src/: main.rs
tournament-service/src/db/: db.rs  models.rs  schema.rs
tournament-service/src/routes/: mod.rs  tournament_routes.rs
(+22 files in other folders)
