[package]
name = "tournament_service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "postgres", "serde_json"] }
dotenvy = "0.15.7"
psql = "0.0.0"
rocket = "0.5.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
